--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>JS胖 lesson 1</title>
 </head>
 <body>
+  <div id="nav"></div>
   <div id="gogo"></div>
   <div>
     <img src="images/wo.png" alt="">
